Fix styling for announcement bar
The close button in the announcement bar was too low and aligned in the middle of the banner.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -55,7 +55,8 @@
 /* Announcement Bar */
 div[class^='announcementBar'] {
   font-size: 1.1rem;
-  padding: 20px 0;
+  padding: 5px 0;
+  height: auto;
 }
 
 /* Home page cards */
